# mean-reversion-backtest

./: CMakeLists.txt  README.md  main.cpp  requirements.txt  tmp.txt
cpp/: backtest_engine.h
data/derived/: spy_decision_today_20260130_002102.csv  spy_latest_sharpe_snapshot.csv  spy_latest_sharpe_snapshot_20260130_002102.csv  spy_rolling_sharpe_panel.csv  spy_rolling_sharpe_panel_20260130_002102.csv
data/raw/: spy_2025_Jul_Dec.csv
python/: bindings.cpp  decision_layer.py  example.ipynb  fetch_spy.py  monitor_sharpe.py  signal.py
src/: BacktestEngine.cpp
